--- a/zeros_certifies_stage.tex
+++ b/zeros_certifies_stage.tex
@@ -152,13 +152,15 @@
 		
 		\vspace{2mm}
 		
-		\textbf{Entrée:} fonction $f(x)$. rationel a. epsilon une distance. $\lambda$ la constante de lipschitz.
+		\textbf{Entrée:} fonction $f(x)$. rationel a. $\epsilon$ une distance. $\lambda$ la constante de lipschitz.
 		
 		\textbf{Sortie:} point b à une distance inférieur à epsilon au zéro le plus proche. 
 		
 		\begin{algorithmic}[1]
-			\STATE Tant que $d(a,N_{f}(a))>\frac{epsilon}{1+\lambda}$
-			 return $a-\frac{f(a)}{f'(a)}=N_{f}(a)$
+			\STATE x:=$N_{f}(a)$
+			\STATE Tant que $d(x,N_{f}(x))>\frac{\epsilon}{1+\lambda}$\\
+					x:=$N_{f}(x)$					
+			\STATE return $N_{f}(x)$
 		\end{algorithmic}
 	\end{algorithm}
 
@@ -420,16 +422,43 @@
 	On écrit la relation sur u en terme de séries: $(n+1)u_{n+1}=\sum_{k=0}^{n}u_{n-j}a_{j}$ en considérant $v$ telle que  $(n+1)v_{n+1}=\sum_{k=0}^{n}v_{n-j}M\rho^{-j}$ on observe $v'(z)=\frac{M}{1-z\rho^{-1}}v(z)$ \\
 	On a $v=v_{0}(1-z\rho^{-1})^{-M\rho}$. Si $|u_{0}| \leq v_{0}$ la récurrence permet de conclure $ u\unlhd v$. On sait que le rayon de convergence de $v$ est $\rho$ donc celui de $u$ est supérieur à $\rho$, la condition $u'(z)=a(z)u(z)$ permet de conclure l'égalité.
 	
-	\subsection{Séries majorantes pour les fonctions D-finies normalisées}
+	\subsection{Séries majorantes pour les fonctions D-finies}
+	Dans l'example que nous avons vu précèdement, les séries majorantes servent à majorer des fonctions, elle sont utilisées sur les restes des séries pour connaître la précision de l'approximation de la fonction étudiée.
 	
-	Soit D une équation différentielle normalisée, l'intérêt de cette normalisation est de se débarasser du $\kappa$ pour ne plus avoir de comportement asymptotique factoriel de la suite $u_n$. L'idée est la même que dans la méthode exposée précèdement, on cherche à trouver une récurrence qui pourra assurer que si les premiers coefficients sont bien majorés, alors la suite entière est majorée.
-	
-	\[\theta^{r}+\frac{a^{[r-1]}\theta^{r-1}+...+a^{[0]}}{a^{[r]}}\]
-	Le procédé de majoration est le suivant. En isolant le coefficient constant du développement de Taylor en zéro de chaque coefficient, l'équation se réecrit
-	\[Q(\theta).u=z(a^{[r-1]}\theta^{r-1}+...+a^{[0]}).u\]
+	Soit D une équation différentielle normalisée, l'intérêt de cette normalisation est de se débarasser du $\kappa$ pour ne plus avoir de comportement asymptotique factoriel de la suite $u_n$. L'idée est la même que dans la méthode exposée précèdement, on cherche à trouver une récurrence qui pourra assurer que si les premiers coefficients sont bien majorés, alors la suite entière est majorée. Le cas qui pourrait paraître singulier de l'équation différentielle normalisée est en fait le plus courant puisqu'il correspond au cas où l'on est à une distance finie non nulle de la singularité la plus proche.
 	
 	
-	\newpage
+	\[P(z,\theta) \cdot u(z)=\big[\theta^{r}p_r(z)+\theta^{r-1}p_{r-1}(z)+...+p_0(z)\big]\cdot u(z)=0\]
+	Les polynômes $p_0,p_1,...,p_r$ peuvent être considérés premiers entre eux sans perte de généralité. Soit
+	 \[\overset{\sim}{u}(z)=\sum_{k=0}^{N}u_n z^n\hspace{2mm}\text{avec}\hspace{2mm}u(z)-\overset{\sim}{u}(z)=R_u^{N+1}(z)\] 
+	alors 
+	\[  P(z,\theta) \cdot u(z)-\overset{\sim}{u}(z)=P(z,\theta)\overset{\sim}{u}(z)=q(z)\]
+	Où $q(z)$ est de la forme $q_Nz^N+...+q_N+sz^{N+s}$ où $s= \deg_{z}P(z,\theta) $ 
+	\\
+	On a alors l'équation majorante suivante
+	\[y(z)=p_r(z)(\overset{\sim}{u}(z)-u(z))\]
+	Supposant que $p_r(0) \neq 0$ c'est à dire qu'on soit sur un point régulier,
+	\[L(z,\theta)\cdot y(z)=\Big[\theta^{r}+\frac{\theta^{r}p_{r-1}(z)+...+p_0(z)}{p_r(z)}\Big]\]
+	On réécrit $L(z,\theta)$ en développant $p_r^{-1}$ en série entière
+	\[L(z,\theta)=\sum_{j\geq 0} Q_{j}(\theta)z^j.\]
+	Le polynôme $Q_0$ est de degré $r$ alors que pour $j \geq 1$ le degré des polynômes est inférieur à r-1.
+	En repassant l'équation sous forme séquentielle, on a 
+	\[L(S^{-1},n)\cdot (y_n)_{n \in \mathbb{Z}}=\sum Q_j(n)S^{-j} \cdot  (y_n)_{n \in \mathbb{Z}} =(q_n)_{n \in \mathbb{Z}} \]
+	Alors
+	\[y_n=\frac{q_n-\sum_{j\geq1}Q_j(n)y_{n-j}}{Q_0(n)}= \frac{1}{n}\Big[\frac{nq_n}{Q_0(n)}-\sum_{j\geq1}\frac{nQ_j(n)y_{n-j}}{Q_0(n)}\Big]\tag{*}\]
+	Avec ce qui a été dit précèdement, les coefficients $nq_n/Q_0(n)$ et $nQ_j(n)/Q_0(n)$ sont bornés.
+	Supposons qu'on ait $\hat{q}_n$ et $\hat{a}_n$ bornées aussi telles que
+	\begin{equation}
+	|nq_n/Q_0(n)|\leq \hat{q}_n,  \hspace{4mm}\forall n\geq n_0\\
+	\end{equation}
+	\begin{equation}
+	|nQ_j(n)/Q_0(n)|\leq \hat{a}_n,\hspace{3mm}  \forall n\geq n_0, \hspace{2mm} j\geq 1
+	\end{equation}
+	avec $\hat{a}_j=O(\alpha^j)$ pour un certain $\alpha$ quand $j \rightarrow \infty$. On peut alors déduire de (*).
+	\[ \leq|\hat{y}_n|=\frac{1}{n}\Big(\hat{q}_n+\sum_{j\geq1}\hat{a}_{n}\hat{y}_{n-j}\Big)\tag{1}\]
+	Dans ce cas $\hat{y}_n$ est une série majorante de $y_n$. En traduisant l'équation (1) en équation différentielle on obtient
+	\[[\theta-\hat{a}(z)] \hat{y}(z) = \hat{q}(z)\]
+	On a 
 	
 	
 	
@@ -521,7 +550,10 @@
 	
 	\begin{definition} Soient $\mathbb{E}$ et $\mathbb{F}$ des espaces de Banach et 
 		Soit $f:\mathbb{E}\rightarrow \mathbb{F}$ une fonction analytique, notons $\zeta$ un point de $\mathbb{E}$ tel que $f(\zeta)=0$, alors on note
-		\[sep(f,\zeta)=\inf_{f(\zeta '=0, \hspace{1mm} \zeta \neq \zeta ')}\left\|\zeta-\zeta '\right\|\] 
+		\begin{equation}
+		 sep(f,\zeta)=\inf_{f(\zeta '=0, \hspace{1mm} \zeta \neq \zeta ')}\left\|\zeta-\zeta '\right\|
+		\end{equation}
+		
 	\end{definition}
 	
 	Le théorème suivant est le théorème de Rouché, il est générale, on l'utilisera pour le cas particulier n=1
@@ -554,21 +586,21 @@
 	$\mathbb{I}=\{[c,d] \text{ indéterminés }\}$\\
 	\end{definition}
 
-	\noindent On cherche à rajouter des intervalles dans l'ensemble $\mathbb{A}$, c'est à dire des intervalles contenant des zéros  de multiplicité 1.
-	Avant d'énoncer le théorème, on définit la fonction. 
-	\begin{definition} Soit $f$ une fonction définie de$\mathbb{R}$ dans $\mathbb{R}_+$ croissante sur $\mathbb{R}_+$ on définit la fonction $S:(\mathbb{R}_+ \rightarrow \mathbb{R}) \longrightarrow \mathbb{R}_+$  telle que $S(f)$ renvoie le premier $x \in \mathbb{R}_+$ tel que $f(x)=1$, elle renvoie zéro si $f(0) \geq1$. On  peut l'écrire formellement
+	\noindent On cherche à rajouter des intervalles dans l'ensemble $\mathbb{A}_1$, c'est à dire des intervalles contenant un unique zéro de multiplicité 1.
+	Avant d'énoncer le théorème, on définit la fonction $S$ dont nous aurons besoin par la suite. 
+	\begin{definition} Soit $f$ une fonction définie de $\mathbb{R}$ dans $\mathbb{R}_+$, croissante sur $\mathbb{R}_+$ on définit la fonction $S:(\mathbb{R}_+ \rightarrow \mathbb{R}) \longrightarrow \mathbb{R}_+$  telle que $S(f)$ renvoie le plus petit $x \in \mathbb{R}_+$ tel que $f(x)=1$, elle renvoie 0 si $f(0) \geq1$. On  peut l'écrire formellement
 		\begin{equation}
 		S(f)=
 		\left\lbrace
 		\begin{array}{ccc}
 		0  & \mbox{si} & f(0) \geq 1\\
-		\inf (f^{-1}(1)\cap \mathbb{R}_{+}) & \mbox{sinon}\\
+		\inf \{x \in f^{-1}(1)\cap \mathbb{R}_{+}\} & \mbox{sinon}\\
 		\end{array}\right.
 		\end{equation}
 	\end{definition}
 	\begin{theorem}	Soit f une fonction, $\zeta$ et $\zeta '$ deux points de $\mathbb{R}$ tels que $f'(\zeta)\neq 0$ et que $f(\zeta)=f(\zeta ')=0$ et $|\zeta '-\zeta|$ inférieur au rayon de convergence du développement en série entière de $f$ en $\zeta$. 
 		
-		\[Sep(f,\zeta) \geq S\Big(|f'(\zeta)^{-1}|\frac{M_{f}^{2}(\zeta)(t)}{t}\Big) \hspace{4mm} \text{S la fonction de la définition} \]
+		\[Sep(f,\zeta) \geq S\Big(|f'(\zeta)^{-1}|\frac{M_{f}^{2}(\zeta)(t)}{t}\Big) \hspace{4mm} \]
 	\end{theorem}
 
 	\noindent \textbf{Démonstration} Raisonnons par l'absurde, 
@@ -590,14 +622,13 @@
 	
 	\begin{theorem} Soit $f:\mathbb{C} \rightarrow \mathbb{C}$ une fonction analytique, soit $x_0 \in \mathbb{C}$ tel que $f'(x_0) \neq 0$. Si 
 	\[\beta(f,x_0)<\sup_{r \in [0,\mathbb{S}_{f}(x_0)]} r-|f'(\zeta)^{-1}|\frac{M_{f}^{2}(\zeta)(r)}{r}\]
-	 alors on peut assurer qu'il existe un unique zéro sur un intervalle ouvert de taille $\tau$ avec
-	 \[\frac{\tau}{2}=\sup \Big\{t \in [0,\mathbb{S}_{f}(x_0)],  t-|f'(\zeta)^{-1}|\frac{M_{f}^{2}(\zeta)(t)}{t}>\beta(f,x_0)\Big\} \]
-	 Plus précisément $]x_0-\frac{\tau}{2},x_0+\frac{\tau}{2}[$ contient un unique zéro.
-	 
-		
-
+	 alors on peut assurer qu'il existe un unique zéro pour f sur $B(x_0,\tau)$ la boule ouverte centré en $x_0$ avec
+	 \[\tau=\sup \Big\{t \in [0,\mathbb{S}_{f}(x_0)],  t-|f'(\zeta)^{-1}|\frac{M_{f}^{2}(\zeta)(t)}{t}>\beta(f,x_0)\Big\} \]
 	\end{theorem}
-	
+	 Nous montrerons que dans le cas réel que $]x_0-\tau,x_0+\tau[$ contient un unique zéro. Ce qui vient du fait qu'une racine complexe admet aussi son conjugué comme racine, hors la boule trouvé est centrée sur un point de l'axe des réels donc il devrait y avoir 2 zéros et non pas 1 dans la boule.
+	 
+	 \vspace{7mm}	
+
 	\noindent\textbf{Démonstration} Définissons $g(x)=f(x)-f(x_0)$, $g(x_0)=0$, $Dg(x_0)=f'(x_0)$ d'après le théorème précèdent, $x_0$ est le seul zéro de g dans la boule
 	$B(x_0,\mathbb{S}_{f}(x_0))$
 	La série de Taylor de g est convergente, elle est donée par
@@ -617,10 +648,16 @@
 	\[\beta(f,x_0)<r-M_{f}^{2}(x_0)(r)\] 
 	Ce sera cette expression qui permettra d'exclure des intervalles. Pour commencer on peut dire que si 
 	\[\beta(f,x_0)< \sup_{r \in [0,\mathbb{S}_{f}(x_0)]}\{r-M_{f}^{2}(x_0)(r)\}\]
-	alors, soit $r_0$ le point où le sup est atteint, on peut alors réccupérer un intervalle de la taille $2r_0$.
+	alors, il existe au moins un $t$ supérieur à $r_0$ le point où le sup est atteint dans $[0,\mathbb{S}_{f}(x_0)]$ tel que $t-M_{f}^{2}(x_0)(t)>\beta(f,x_0)$
+	Mais pour tout $t$ tels que cette inégalité est satisfaite on a
+	\[|f'(x_0)^{-1}g(x)|\geq t-M_{f}^{2}(x_0)(t)>\beta(f,x_0)=|f'(x_0)^{-1}f(x)-f'(x_0)^{-1}g(x)| \tag{*}\]
+	On peut appliquer le théorème de Rouché sur la boule $B(x_0,t)$, mais on a alors
+ 	\[B(x_0,\tau)=\bigcup_{t}B(x_0,t) \hspace{4mm} \text{ t vérifiant (*) et } \tau \text{ celui défini dans l'énoncé}\]
+	 Ne contient lui même qu'un seul zéro.
+	 
 	
 	
-	\subsection{Cas des }
+	\subsection{Taille minimales des intervalles ajoutés à $\mathbb{A}_i$}
 
 	
 \end{document}
