ajout de la méthode de majoration partie 5.7

--- a/zeros_certifies_stage.tex
+++ b/zeros_certifies_stage.tex
@@ -424,8 +424,7 @@
 	
 	\subsection{Séries majorantes pour les fonctions D-finies}
 	Dans l'example que nous avons vu précèdement, les séries majorantes servent à majorer des fonctions, elle sont utilisées sur les restes des séries pour connaître la précision de l'approximation de la fonction étudiée.
-	
-	Soit D une équation différentielle normalisée, l'intérêt de cette normalisation est de se débarasser du $\kappa$ pour ne plus avoir de comportement asymptotique factoriel de la suite $u_n$. L'idée est la même que dans la méthode exposée précèdement, on cherche à trouver une récurrence qui pourra assurer que si les premiers coefficients sont bien majorés, alors la suite entière est majorée. Le cas qui pourrait paraître singulier de l'équation différentielle normalisée est en fait le plus courant puisqu'il correspond au cas où l'on est à une distance finie non nulle de la singularité la plus proche.
+	Le cas qui pourrait paraître singulier de l'équation différentielle normalisée est en fait le plus courant puisqu'il correspond au cas où l'on est à une distance finie non nulle de la singularité la plus proche.
 	
 	
 	\[P(z,\theta) \cdot u(z)=\big[\theta^{r}p_r(z)+\theta^{r-1}p_{r-1}(z)+...+p_0(z)\big]\cdot u(z)=0\]
